# usbip-gui

./: .gitignore  CMakeLists.txt  gtkmenushim.cpp  gtkmenushim.h  hostsdialog.cpp  hostsdialog.h  hostsdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  trayiconmanager.cpp  trayiconmanager.h  usbipclient.cpp  usbipclient.h  usbiptypes.h
